# codebench

./: .dockerignore  .editorconfig  CNAME  Cargo.toml  Dockerfile  docker-compose.build.yml  docker-compose.dev.yml  index.html  style.css
.github/workflows/: testing.yml
codebench-cli/: Cargo.toml
codebench-cli/src/: main.rs
codebench-criterion/: Cargo.toml
codebench-criterion/src/: lib.rs
codebench-env/: Cargo.toml
codebench-env/src/: lib.rs
codebench-landing/: Dockerfile  Makefile
codebench-landing/src/: index.html  style.css
codebench-reader/: Cargo.toml
codebench-reader/src/: lib.rs
codebench-server/: Cargo.toml
codebench-server/src/: config.rs  main.rs
codebench-server/src/controller/: status.rs
resources/vector-criterion/batch/partitioned_gzip(6)_2000000/base/: benchmark.json  estimates.json  sample.json  tukey.json
resources/vector-criterion/batch/partitioned_gzip(6)_2000000/new/: raw.csv
resources/vector-criterion/batch/report/: index.html
resources/vector-criterion/event_create/array/base/: tukey.json  (+2 more)
resources/vector-criterion/event_create/report/: index.html
resources/vector-criterion/event_iterate/report/: index.html
resources/vector-criterion/http/report/: index.html
resources/vector-criterion/lua_add_fields/report/: index.html
resources/vector-criterion/lua_field_filter/report/: index.html
resources/vector-criterion/metrics_snapshot/report/: index.html
resources/vector-criterion/report/: index.html
resources/vector-criterion/template/report/: index.html
resources/vector-criterion/topology/report/: index.html
(+234 files in other folders)
