[package]
name = "codebench-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codebench-criterion = { path = "../codebench-criterion" }
codebench-reader = { path = "../codebench-reader" }
#
clap = { version = "3.0.0-beta.5" }
